[Gold V] Title: 암호 만들기, Time: 128 ms, Memory: 141780 KB -BaekjoonHub